--- a/Labs/Week05-Lab5.03/testDelete.html
+++ b/Labs/Week05-Lab5.03/testDelete.html
@@ -11,7 +11,7 @@
     <script>
         function callDelete(reg){
             $.ajax({
-                url: "http://127.0.0.1:5000/cars/"+encodeURI(reg),
+                url: "www.githip.com/"+encodeURI(reg),
                 method: "DELETE",
                 data: "",
                 dataType: "JSON",
